# Lore-Services

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: azure-cd.yml  ci.yml
club/: models.py  serializer.py  urls.py  views.py
club/migrations/: 0001_initial.py  0002_alter_club_owner_id.py  0002_alter_userroadmapweek_options_club_owner_and_more.py  0003_alter_club_rating.py  0003_club_rating_roadmapweek_is_completed.py  0004_alter_club_rating.py  0004_rename_owner_id_club_owner.py  0005_alter_club_rating.py  0005_remove_roadmap_club_id_club_roadmap.py  0006_alter_roadmapweek_roadmap_id_clubreview.py  0007_remove_club_roadmap_roadmap_club.py  0008_alter_roadmap_club.py  0009_remove_roadmapweek_is_completed_userroadmapweek_and_more.py  0010_alter_roadmapweek_description_and_more.py  0011_remove_roadmapweek_week_number_club_category.py  0012_club_created_at.py  0013_userroadmapweek_is_in_progress.py  0014_article.py
document/: models.py  urls.py
document/migrations/: 0001_initial.py
instructor/: models.py  serializer.py  urls.py
instructor/migrations/: 0001_initial.py  0002_delete_instructor.py
lore_services/: settings.py  urls.py
lore_services/lore_services/: asgi.py  settings.py  urls.py  wsgi.py
lore_services/utils/: models_utls.py
student/: models.py  serializer.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_delete_student.py
utils/: admin.py  models.py  serializer.py  urls.py  views.py
utils/migrations/: 0001_initial.py  0002_alter_user_clubs.py  0005_user_friends.py  (+4 more)
