[tool.poetry]
name = "lore-services"
version = "0.1.0"
description = ""
authors = ["ixbahy <ixbahy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
markdown = "^3.6"
django-filter = "^24.2"
pillow = "^10.3.0"
psycopg = "^3.1.18"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
